--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -25,3 +25,219 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+
+
+.navbar{
+  display:flex;
+  align-items: center;
+  box-shadow: rgba(17, 17, 26, 0.1) 0px 0px 16px;
+  background-color: #fff;
+  position: sticky;
+    top: 0;
+    z-index: 10;
+}
+
+.editor-sidebar{
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  min-height: 100vh;
+  width:300px;
+  background-color:#fff;
+  position: fixed;
+  top:0;
+  left:calc(100vw - 300px);
+  z-index: 10;
+  transition: 0.3s ease-in-out;
+  padding: 6px;
+}
+
+.sidebar-close{
+  left:110vw;
+}
+
+
+
+.navbar img, .navbar .heading{
+  margin: 10px 13px;
+}
+
+.navbar .heading{
+  font-size: 22px;
+  font-weight: 400;
+  color: #333;
+  margin-left: 0px;
+
+}
+
+
+
+.code-editor-sect-main{
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.code-editor-col{
+  width:60%;
+  min-height: 80vh;
+  background-color: #fff;
+
+
+}
+
+.code-op-col{
+  width:40%;
+  min-height: 70vh;
+  margin:0px 0%;
+  background-color: #fff;
+
+}
+
+.io-box{
+  width:100%;
+  height:50%;
+  border : 1px solid rgb(229, 231, 235);
+  padding:6px 10px;
+  overflow-y: auto;
+}
+
+.io-box h4{
+  font-weight: bold;
+  color: gray;
+}
+
+.editor-top-opt{
+  display: flex;
+  align-items: center;
+}
+
+.editor-top-opt i{
+  color: rgb(133 133 164);
+  margin-right:12px;
+}
+
+.run-btn{
+  color: #fff;
+  background-color: #5063f0;
+  padding: 4px 10px;
+  font-size: 0.8125rem;
+  box-shadow: 0px 3px 1px -2px rgba(0,0,0,0.2), 0px 2px 2px 0px rgba(0,0,0,0.14), 0px 1px 5px 0px rgba(0,0,0,0.12);
+  margin-right: 10px;
+}
+
+
+.settings-toggle{
+  border: none;
+  padding: 0;
+}
+
+.settings-toggle:hover{
+  background-color: transparent;
+}
+
+.custom-profile{
+  width:40px;
+  height:40px;
+  padding:6px;
+  font-size: 18px;
+  color: #f1f1ff;
+  margin-right: 10px;
+  background-color: #333;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.problems-tbl-main{
+
+  width: 97vw;
+  box-shadow: 0px 0px 2px 0px rgb(0 0 0 / 16%);
+  min-height: 80vh;
+  margin: auto;
+}
+
+.problems-tbl .row{
+  display: grid;
+  grid-template-columns: 10% 30% 10% 10% 10% 10%;
+  gap:20px;
+  margin: 10px;
+
+
+}
+.problems-tbl .row div{
+ padding:10px;
+}
+
+.problems-tbl .row:first-child{
+  color: #3c3c4399;
+ }
+
+
+.problems-tbl {
+  display: grid;
+  grid-template-columns: 100%;
+  gap:1px;
+
+}
+
+.row-tbl-body:nth-child(even) {
+  background: rgb(92 94 92 / 11%);
+}
+
+.tbl-filter-lbl{
+  margin:0px 10px;
+}
+
+.tbl-filter-comp{
+  background-color: #f2f3f4;
+  color:#333;
+  border:1px solid #ededed;
+}
+
+.problem-example-sect p{
+  margin:20px 0px;
+}
+
+.Easy-lbl,.Medium-lbl{
+
+  padding:7px 17px;
+  font-size: 11px;
+  color:#fff;
+  border-radius: 999px;
+
+}
+.Easy-lbl{
+  background-color: rgb(42, 133, 42);
+}
+
+.Medium-lbl{
+  background-color: #c9d217;
+}
+
+.problem-display-modal{
+  max-width: 94vw;
+  max-height: 90vh;
+  overflow: auto;
+}
+
+
+@media screen and (max-width:900px) {
+  .navbar .heading{
+    font-size: 16px;
+  }
+  .nav-right{
+    display: none !important;
+
+  }
+  .nav-right-menu-mobile{
+    display: block !important;
+  }
+  .code-editor-col, .code-op-col{
+  min-width: 95vw;
+  width:95vw;
+  }
+  
+}
+
+
+
+
